--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 
     "build:polyfills": "copyfiles -f node_modules/webvr-polyfill/build/webvr-polyfill.js node_modules/whatwg-fetch/fetch.js node_modules/html5shiv/dist/html5shiv.min.js node_modules/promise-polyfill/Promise.min.js node_modules/js-polyfills/es5.js node_modules/js-polyfills/dom.js node_modules/js-polyfills/typedarray.js node_modules/ie8/build/ie8.js node_modules/custom-event-polyfill/custom-event-polyfill.js node_modules/gamepad-plus/dist/gamepads.js dist/js/polyfills",
     "build:html": "copyfiles -f src/index.html dist/",
-    "build:exhtml": "copyfiles -f src/example.html dist/ && copyfiles -f src/ui.js dist/js && copyfiles -f src/styles.css dist/css/",
+    "build:exhtml": "copyfiles -f src/example.html dist/ && copyfiles -f src/webvr-dom-ui.js dist/js && copyfiles -f src/styles.css dist/css/",
     "build:assets": "copyfiles -f assets/icons/* dist/img/icons/ && copyfiles -f assets/images/* dist/img/ && copyfiles -f assets/models/* dist/models/ && copyfiles -f assets/favicon.ico dist/",
     "build:dist": "npm run build:html && npm run build:detector",
     "build:example": "npm run build:exhtml && npm run build:assets && npm run build:detector && npm run build:polyfills && npm run build:three",
