--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "url": "https://github.com/ccoenraets/es6-tutorial/issues"
   },
   "homepage": "https://github.com/pindiespace/webvr-feature-detector",
-  "scripts": { 
+  "scripts": {
     "prebuild": "npm run clean -s && mkdirp dist/js && mkdirp dist/img mkdirp dist/css && mkdirp dist/models",
     "build:detector": "copyfiles -f src/index.html dist && stripify src/webvr-feature-detector.js > src/bundle.js && browserify -t -d src/bundle.js -d -p [minifyify . --drop_console . --compressPath . --map webvr-feature-detector.js.map --output dist/js/webvr-feature-detector.js.map] > dist/js/webvr-feature-detector.js && copyfiles -f src/pngfallback.js dist/js",
     "build:debug": "copyfiles -f src/index.html dist && copyfiles -f src/webvr-feature-detector.js -d -p [minifyify . --drop_console . --compressPath . --map webvr-feature-detector.js.map --output dist/js/webvr-feature-detector.js.map] > dist/js/webvr-feature-detector.js && copyfiles -f src/pngfallback.js dist/js",
     "build:debugfull": "copyfiles -f src/index.html dist && copyfiles -f src/webvr-feature-detector.js dist/js && copyfiles -f src/pngfallback.js dist/js",
     "build:three": "copyfiles -f node_modules/three/build/three.min.js node_modules/three/examples/js/Detector.js node_modules/three/examples/js/controls/OrbitControls.js node_modules/three/examples/js/controls/VRControls.js node_modules/three/examples/js/effects/VREffect.js node_modules/three/examples/js/renderers/CanvasRenderer.js node_modules/three/examples/js/renderers/Projector.js dist/js/three",
-
-    "build:polyfills": "copyfiles -f node_modules/webvr-polyfill/build/webvr-polyfill.js node_modules/whatwg-fetch/fetch.js node_modules/html5shiv/dist/html5shiv.min.js node_modules/promise-polyfill/Promise.min.js node_modules/js-polyfills/es5.js node_modules/js-polyfills/dom.js node_modules/js-polyfills/typedarray.js node_modules/ie8/build/ie8.js node_modules/custom-event-polyfill/custom-event-polyfill.js node_modules/gamepad-plus/dist/gamepads.js dist/js/polyfills",
+    "build:polyfills": "copyfiles -f node_modules/webvr-polyfill/build/webvr-polyfill.js node_modules/whatwg-fetch/fetch.js node_modules/html5shiv/dist/html5shiv.min.js node_modules/promise-polyfill/Promise.min.js node_modules/js-polyfills/es5.js node_modules/js-polyfills/dom.js node_modules/js-polyfills/typedarray.js node_modules/ie8/build/ie8.js node_modules/custom-event-polyfill/custom-event-polyfill.js node_modules/gamepad-plus/dist/gamepads.js node_modules/pseudo-worker/dist/pseudo-worker.polyfill.min.js dist/js/polyfills",
     "build:html": "copyfiles -f src/index.html dist/",
     "build:exhtml": "copyfiles -f src/example.html dist/ && copyfiles -f src/plutonian.js dist/js && copyfiles -f src/webvr-dom-ui.js dist/js && copyfiles -f src/styles.css dist/css/",
     "build:assets": "copyfiles -f assets/icons/* dist/img/icons/ && copyfiles -f assets/images/* dist/img/ && copyfiles -f assets/models/* dist/models/ && copyfiles -f assets/favicon.ico dist/",
@@ -52,8 +51,10 @@
     "browserify": "^6.3.2",
     "copyfiles": "latest",
     "express": "^4.13.4",
+    "gamepad-plus": "^1.0.14",
     "minifyify": "^6.4.0",
     "mkdirp": "latest",
+    "pseudo-worker": "^1.1.0",
     "rimraf": "latest",
     "serve-favicon": "^2.3.0",
     "stripify": "^4.0.0"
